--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,11 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MDP():\n",
+    "    \"\"\"A class representing a Markov Decision Process\"\"\"\n",
     "    def __init__(self, transitions: Mapping[S, Mapping[A, Mapping[S, float]]], rewards: Mapping[S, Mapping[A, float]], gamma):\n",
     "        self.all_states_list = list(transitions.keys()) \n",
     "        self.transitions = transitions\n",
@@ -145,9 +146,9 @@
     "                action_dict[s1].add(a)\n",
     "        return action_dict\n",
     "        \n",
-    "    def get_transition(self, s: S):\n",
+    "    def get_transition(self, s: S, a: A):\n",
     "        try:\n",
-    "            return self.transitions[s]\n",
+    "            return self.transitions[s][a]\n",
     "        except ValueError:\n",
     "            print(\"Invalid state!\")\n",
     "            \n",
@@ -172,6 +173,8 @@
     "        val_func_vec = mrp.get_value_function()\n",
     "        length = len(mrp.all_states_list)\n",
     "        val_func_dict = {}\n",
+    "        for s in self.all_states_list:\n",
+    "            val_func_dict[s] = 0\n",
     "        for i in range(length):\n",
     "            val_func_dict[mrp.all_states_list[i]] = val_func_vec[i]\n",
     "        return val_func_dict\n",
@@ -183,11 +186,10 @@
     "            action_val_func_dict[s1] = {}\n",
     "            for a, v2 in v1.items():\n",
     "                action_val_func_dict[s1][a] = v2 \n",
-    "                for s2, p in self.transitions[s][a].items():                 \n",
+    "                for s2, p in self.transitions[s1][a].items():                 \n",
     "                    action_val_func_dict[s1][a] += self.gamma * p * val_func_dict[s2]\n",
     "        return action_val_func_dict\n",
-    "        \n",
-    "        \n",
+    "         \n",
     "        "
    ]
   },
