--- a/Assignment 8 -  Feb 12.ipynb
+++ b/Assignment 8 -  Feb 12.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Merton's Portfolio problem as an MDP (write the model in LaTeX)"
+    "### Implement Forward-View TD(Lambda) algorithm for Value Function Prediction"
    ]
   },
   {
@@ -18,35 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implement this MDP model in code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Try recovering the closed-form solution (by making your time steps small enough) with a DP algorithm that you implemented previously"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model a real-world Portfolio Allocation+Consumption problem as an MDP (including real-world frictions and constraints)"
+    "### Implement Backward View TD(Lambda), i.e., Eligibility Traces algorithm for Value Function Prediction"
    ]
   },
   {
