--- a/Assignment 9 - Mar 4.ipynb
+++ b/Assignment 9 - Mar 4.ipynb
@@ -207,12 +207,12 @@
    "source": [
     "If the following two conditions are satisfied:\n",
     "1. Critic gradient is compatible with the Actor score function\n",
-    "$$ \\nabla_w Q(s, a; w) = \\nabla_{\\theta} \\log \\pi (s,a; \\theta) \\tag{1}$$\n",
+    "$$ (1): \\nabla_w Q(s, a; w) = \\nabla_{\\theta} \\log \\pi (s,a; \\theta) \\tag{1}$$\n",
     "2. Critic parameters $w$ minimize the following mean-squared error:\n",
-    "$$ \\epsilon = \\int_S \\rho^{\\pi} (s) \\int_A \\pi(s,a; \\theta)(Q^{\\pi})(s,a)-Q(s,a;w))^2 da \\cdot ds \\tag{2}$$\n",
+    "$$ (2): \\epsilon = \\int_S \\rho^{\\pi} (s) \\int_A \\pi(s,a; \\theta)(Q^{\\pi})(s,a)-Q(s,a;w))^2 da \\cdot ds \\tag{2}$$\n",
     "\n",
     "Then the Policy Gradient using critic $Q(s,a;w)$ is exact\n",
-    "$$ \\nabla_{\\theta} J(\\theta) = \\int_S \\rho^{\\pi} (s) \\int_A \\nabla_{\\theta} \\pi (s,a; \\theta) Q(s,a; w) da \\cdot ds \\tag{3}$$\n",
+    "$$ (3): \\nabla_{\\theta} J(\\theta) = \\int_S \\rho^{\\pi} (s) \\int_A \\nabla_{\\theta} \\pi (s,a; \\theta) Q(s,a; w) da \\cdot ds \\tag{3}$$\n",
     "\n",
     "For $w$ that minimizes (2),\n",
     "\n",
