--- a/Assignment 8 -  Feb 14.ipynb
+++ b/Assignment 8 -  Feb 14.ipynb
@@ -9,7 +9,8 @@
     "from typing import Mapping, Optional, Set, Callable\n",
     "import numpy as np\n",
     "from utils.generic_typevars import S, A\n",
-    "from utils.mp_funcs import get_rv_gen_func_single"
+    "from utils.mp_funcs import get_rv_gen_func_single\n",
+    "from utils.mp_funcs import get_expected_action_value"
    ]
   },
   {
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,10 +102,10 @@
     "    A model-free RL interface that does not need the state-transition probability model or the reward model\n",
     "    '''\n",
     "    \n",
-    "    def __init__(self, mdp_for_rl_tab: MDPforRLTab, exploring_start: bool, softmax: bool, epsilon: float, \n",
+    "    def __init__(self, mdp: MDPforRLTab, exploring_start: bool, softmax: bool, epsilon: float, \n",
     "                 epsilon_half_life: float, num_episodes: int, max_steps: int):\n",
     "\n",
-    "        self.mdp = mdp_rep_for_rl\n",
+    "        self.mdp = mdp\n",
     "\n",
     "    # get a state-action dictionary\n",
     "    def get_actions(self) -> Mapping[S, Set[A]]:\n",
@@ -122,82 +123,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Sarsa:\n",
-    "    def __init__(self, mdp: MDPforRLTab, epsilon: float, alpha: float, lamb: float, num_episodes: int, max_steps: int, initial_policy: Policy):\n",
+    "    def __init__(self, mdp: MDPforRLTab, epsilon: float, alpha: float, lamb: float, num_episodes: int, max_steps: int, learning_rate_decay: float):\n",
     "        self.mdp = mdp,\n",
     "        self.lamb = lamb\n",
     "        self.epsilon = epsilon,\n",
     "        self.num_episodes = num_episodes,\n",
     "        self.max_steps = max_steps\n",
-    "        self.alpha = alpha\n",
-    "        self.gamma_lambda = self.mdp.gamma * lamb       \n",
-    "        self.policy = initial_policy\n",
+    "        self.alpha = alpha      \n",
+    "        self.learning_rate_decay = learning_rate_decay\n",
     "\n",
-    "    def get_qv_func_dict(self, pol: Policy):\n",
-    "        control = pol is None\n",
-    "        this_pol = pol if pol is not None else self.get_init_policy()\n",
-    "        sa_dict = self.mdp_rep.state_action_dict\n",
-    "        qf_dict = {s: {a: 0.0 for a in v} for s, v in sa_dict.items()}\n",
+    "    def get_q_values(self, pol):\n",
+    "        policy = pol if pol is not None else self.get_init_policy()\n",
+    "        q_values = {s: {a: 0.0 for a in v} for s, v in self.mdp.state_action_dict.items()}\n",
     "        episodes = 0\n",
     "        updates = 0\n",
     "\n",
     "        while episodes < self.num_episodes:\n",
-    "            if self.exploring_start:\n",
-    "                state, action = self.mdp_rep.init_state_action_gen()\n",
-    "            else:\n",
-    "                state = self.mdp_rep.init_state_gen()\n",
-    "                action = get_rv_gen_func_single(\n",
-    "                    this_pol.get_state_probabilities(state)\n",
-    "                )()\n",
+    "            state = self.mdp.init_state_gen()\n",
+    "            action = get_rv_gen_func_single(policy.get_state_probabilities(state))()\n",
     "            steps = 0\n",
-    "            terminate = False\n",
     "\n",
-    "            while not terminate:\n",
+    "            while True:\n",
     "                next_state, reward = self.mdp.state_reward_gen_dict[state][action]()\n",
-    "                next_action = get_rv_gen_func_single(this_pol.get_state_probabilities(next_state))()\n",
-    "                elif self.algorithm == TDAlgorithm.ExpectedSARSA and control:\n",
-    "                    # next_qv = sum(this_pol.get_state_action_probability(\n",
-    "                    #     next_state,\n",
-    "                    #     a\n",
-    "                    # ) * qf_dict[next_state][a] for a in qf_dict[next_state])\n",
-    "                    next_qv = get_expected_action_value(\n",
-    "                        qf_dict[next_state],\n",
-    "                        self.softmax,\n",
-    "                        self.epsilon_func(episodes)\n",
-    "                    )\n",
-    "                else:\n",
-    "                    next_qv = qf_dict[next_state][next_action]\n",
-    "\n",
-    "                qf_dict[state][action] += self.learning_rate *\\\n",
-    "                    (updates / self.learning_rate_decay + 1) ** -0.5 *\\\n",
-    "                    (reward + self.mdp_rep.gamma * next_qv -\n",
-    "                     qf_dict[state][action])\n",
+    "                next_action = get_rv_gen_func_single(policy.get_state_probabilities(next_state))()\n",
+    "                next_q = get_expected_action_value(q_values[next_state], False, self.epsilon)\n",
+    "                q_values[state][action] += self.alpha*(updates / self.learning_rate_decay + 1) ** -0.5 *\\\n",
+    "                    (reward + self.mdp.gamma * next_q - q_values[state][action])\n",
     "                updates += 1\n",
-    "                if control:\n",
-    "                    if self.softmax:\n",
-    "                        this_pol.edit_state_action_to_softmax(\n",
-    "                            state,\n",
-    "                            qf_dict[state]\n",
-    "                        )\n",
-    "                    else:\n",
-    "                        this_pol.edit_state_action_to_epsilon_greedy(\n",
-    "                            state,\n",
-    "                            qf_dict[state],\n",
-    "                            self.epsilon_func(episodes)\n",
-    "                        )\n",
     "                steps += 1\n",
-    "                terminate = steps >= self.max_steps or \\\n",
-    "                    state in self.mdp_rep.terminal_states\n",
+    "                if steps >= self.max_steps or state in self.mdp.terminal_states:\n",
+    "                    break\n",
     "                state = next_state\n",
     "                action = next_action\n",
     "\n",
     "            episodes += 1\n",
     "\n",
-    "        return qf_dict\n"
+    "        return q_values\n"
    ]
   },
   {
@@ -212,7 +178,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class QLearning:\n",
+    "    def __init__(self, mdp: MDPforRLTab, epsilon: float, alpha: float, lamb: float, num_episodes: int, max_steps: int, learning_rate_decay: float):\n",
+    "        self.mdp = mdp,\n",
+    "        self.lamb = lamb\n",
+    "        self.epsilon = epsilon,\n",
+    "        self.num_episodes = num_episodes,\n",
+    "        self.max_steps = max_steps\n",
+    "        self.alpha = alpha      \n",
+    "        self.learning_rate_decay = learning_rate_decay\n",
+    "\n",
+    "    def get_q_values(self, pol):\n",
+    "        policy = pol if pol is not None else self.get_init_policy()\n",
+    "        q_values = {s: {a: 0.0 for a in v} for s, v in self.mdp.state_action_dict.items()}\n",
+    "        episodes = 0\n",
+    "        updates = 0\n",
+    "\n",
+    "        while episodes < self.num_episodes:\n",
+    "            state = self.mdp.init_state_gen()\n",
+    "            action = get_rv_gen_func_single(policy.get_state_probabilities(state))()\n",
+    "            steps = 0\n",
+    "\n",
+    "            while True:\n",
+    "                next_state, reward = self.mdp.state_reward_gen_dict[state][action]()\n",
+    "                next_action = get_rv_gen_func_single(policy.get_state_probabilities(next_state))()\n",
+    "                next_q = max(q_values[next_state][a] for a in q_values[next_state])\n",
+    "                q_values[state][action] += self.alpha*(updates / self.learning_rate_decay + 1) ** -0.5 *\\\n",
+    "                    (reward + self.mdp.gamma * next_q - q_values[state][action])\n",
+    "                updates += 1\n",
+    "                steps += 1\n",
+    "                if steps >= self.max_steps or state in self.mdp.terminal_states:\n",
+    "                    break\n",
+    "                state = next_state\n",
+    "                action = next_action\n",
+    "\n",
+    "            episodes += 1\n",
+    "\n",
+    "        return q_values\n"
+   ]
   },
   {
    "cell_type": "code",
